; ModuleID = '/home/carl/AnghaBench/git/extr_midx.c_nth_midxed_pack_midx_entry.c'
source_filename = "/home/carl/AnghaBench/git/extr_midx.c_nth_midxed_pack_midx_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.multi_pack_index = type { i64 }
%struct.pack_midx_entry = type { i64, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.multi_pack_index*, %struct.pack_midx_entry*, i64)* @nth_midxed_pack_midx_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nth_midxed_pack_midx_entry(%struct.multi_pack_index* %0, %struct.pack_midx_entry* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.multi_pack_index*, align 8
  %6 = alloca %struct.pack_midx_entry*, align 8
  %7 = alloca i64, align 8
  store %struct.multi_pack_index* %0, %struct.multi_pack_index** %5, align 8
  store %struct.pack_midx_entry* %1, %struct.pack_midx_entry** %6, align 8
  store i64 %2, i64* %7, align 8
  %8 = load i64, i64* %7, align 8
  %9 = load %struct.multi_pack_index*, %struct.multi_pack_index** %5, align 8
  %10 = getelementptr inbounds %struct.multi_pack_index, %struct.multi_pack_index* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp sge i64 %8, %11
  br i1 %12, label %13, label %14

13:                                               ; preds = %3
  store i32 1, i32* %4, align 4
  br label %32

14:                                               ; preds = %3
  %15 = load %struct.pack_midx_entry*, %struct.pack_midx_entry** %6, align 8
  %16 = getelementptr inbounds %struct.pack_midx_entry, %struct.pack_midx_entry* %15, i32 0, i32 3
  %17 = load %struct.multi_pack_index*, %struct.multi_pack_index** %5, align 8
  %18 = load i64, i64* %7, align 8
  %19 = call i32 @nth_midxed_object_oid(i32* %16, %struct.multi_pack_index* %17, i64 %18)
  %20 = load %struct.multi_pack_index*, %struct.multi_pack_index** %5, align 8
  %21 = load i64, i64* %7, align 8
  %22 = call i32 @nth_midxed_pack_int_id(%struct.multi_pack_index* %20, i64 %21)
  %23 = load %struct.pack_midx_entry*, %struct.pack_midx_entry** %6, align 8
  %24 = getelementptr inbounds %struct.pack_midx_entry, %struct.pack_midx_entry* %23, i32 0, i32 2
  store i32 %22, i32* %24, align 4
  %25 = load %struct.multi_pack_index*, %struct.multi_pack_index** %5, align 8
  %26 = load i64, i64* %7, align 8
  %27 = call i32 @nth_midxed_offset(%struct.multi_pack_index* %25, i64 %26)
  %28 = load %struct.pack_midx_entry*, %struct.pack_midx_entry** %6, align 8
  %29 = getelementptr inbounds %struct.pack_midx_entry, %struct.pack_midx_entry* %28, i32 0, i32 1
  store i32 %27, i32* %29, align 8
  %30 = load %struct.pack_midx_entry*, %struct.pack_midx_entry** %6, align 8
  %31 = getelementptr inbounds %struct.pack_midx_entry, %struct.pack_midx_entry* %30, i32 0, i32 0
  store i64 0, i64* %31, align 8
  store i32 0, i32* %4, align 4
  br label %32

32:                                               ; preds = %14, %13
  %33 = load i32, i32* %4, align 4
  ret i32 %33
}

declare dso_local i32 @nth_midxed_object_oid(i32*, %struct.multi_pack_index*, i64) #1

declare dso_local i32 @nth_midxed_pack_int_id(%struct.multi_pack_index*, i64) #1

declare dso_local i32 @nth_midxed_offset(%struct.multi_pack_index*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
